force-app/main/default/objects/Apttus__AsyncMergeCall__c/Apttus__AsyncMergeCall__c.object-meta.xml
<CustomObject>
    <description>Holds asynchronous merge calls</description>
    <label>Async Merge Call</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>CallId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Merge Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>