force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <description>The merge action</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generate Supporting Document</fullName>
            </value>
            <value>
                <fullName>Regenerate</fullName>
            </value>
            <value>
                <fullName>Publish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>