force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__Agreement__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated agreement</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>AsyncMerge_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>