force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__CallType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__CallType__c</fullName>
    <description>The call type</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Merge Document</fullName>
            </value>
            <value>
                <fullName>Publish Document</fullName>
            </value>
            <value>
                <fullName>Publish Document (Job)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>