force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__Result__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Result__c</fullName>
    <description>The call result</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>