force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__StartTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus__StartTime__c</fullName>
    <description>Call start time</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>