force-app/main/default/objects/Apttus__AsyncMergeCall__c/fields/Apttus__Template__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated template</description>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipName>AsyncMerge_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>